tests/toy/neg/001367_mutation.toylang
program a = { var a : bool; program a = { } . } .
